...
    <string name="weakPassword">Password is too weak</string>
    <string name="emptyField">This field cannot be empty</string>
    <string name="navigation_my_pets">My Pets</string>
    <string name="navigation_pets_community">Pet\'s community</string>
    <string name="navigation_my_walks">My walks</string>
    <string name="navigation_near_establishments">Near establishments</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="navigation_achievements">Achievements</string>
    <string name="navigation_settings">Settings</string>
    <string name="defaultName">John Doe</string>
    <string name="defaultEmail">johndoe@gmail.com</string>
    <string name="breed_title">Breed</string>
    <string name="birth_date_title">Age(years)</string>
...
    <string name="negative_response">No</string>
    <string name="delete_pet">Delete pet</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_email">Change email</string>
    <string name="save_email">Save new email</string>
    <string name="save_username">Save new username</string>
    <string name="cancel">Cancel</string>
    <string name="user_confirm">Are you sure?</string>
    <string name="delete_account_db">Delete Account of the Database</string>
    <string name="ok">Ok</string>
    <string name="uninplemented"> is not implemented yet</string>
    <string name="calendar_select_date">Select date</string>
    <string name="add_personal_event_button">Personal</string>
    <string name="add_periodic_event_button">Periodic</string>
    <string name="user_profile_image">My profile image</string>
    <string name="dialog_new_event">New personal event</string>
    <string name="dialog_new_event_message">Enter the event description, its time and select the pet that will participate.</string>
    <string name="reasonText">reasonText</string>
    <string name="timeText">timeText</string>
    <string name="spinnerText">spinnerText</string>
    <string name="create">Create</string>
    <string name="add_a_pet">Add a pet</string>
    <string name="incorrect_entry">Incorrect entry</string>
    <string name="description">Description</string>
    <string name="default_hour">12:00:00</string>
    <string name="delete_event">Delete this event</string>
...
    <string name="medal_planner_description">Write everything on the calendar!</string>
    <string name="google_account_not_detected">
        You need to sign in with Google \nto sync with Google Calendar
    </string>

    <!-- The next two strings cannot be translated into any other language -->
    <string name="navigation_view_open" translatable="false">Open</string>
    <string name="navigation_view_closed" translatable="false">Closed</string>

</resources>

