...
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddPersonalEvent"
                style="@style/calendar_button"
                android:text="@string/add_personal_event_button" />

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />
...
